supratim531: fix(OurServicesPage): Fixed several text and alignment

--- a/src/components/shared/Section/Section.module.css
+++ b/src/components/shared/Section/Section.module.css
@@ -36,6 +36,7 @@
   margin: 0;
   font-size: 40px;
   font-weight: 800;
+  text-align: center;
   text-transform: uppercase;
   color: var(--bg-primary-dark);
 
